--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -6,29 +6,29 @@
     thead {
         background-color: var(--has-background-lighter-grey);
         border-width: 0 0 2px;
-
-        th {
-            color: var(--has-text-black);
-            border: 1px solid var(--has-border-dark);
-            border-width: 0 0 1px;
-            padding: 0.5rem;
-            text-align: center;
-            border-color: var(--has-border-dark);
-            text-align: center;
-        }
     }
 
-    tbody {
+    tbody,thead {
         tr {
             background-color: var(--has-background-lightest-grey);
-            border-width: 0 0 1px;
+            // border-width: 0 0 1px;
 
             td {
                 color: var(--has-text-grey);
-
                 text-align: center;
                 padding: 0.5rem;
-
+                border: 1px solid var(--has-border-dark);
+                border-width: 0 1px 1px;
+            }
+            th {
+                color: var(--has-text-black);
+                background-color: var(--has-background-lighter-grey);
+                border: 1px solid var(--has-border-dark);
+                border-width: 0 1px 1px;
+                padding: 0.5rem;
+                text-align: center;
+                border-color: var(--has-border-dark);
+                text-align: center;
             }
 
         }
@@ -38,8 +38,11 @@
         }
 
         tr:hover {
-            background-color: var(--has-background-lighter-grey);
+            // background-color: var(--has-background-lighter-grey);
         }
+    }
+    .selectedCell{
+        background-color: var(--has-background-info);
     }
 
 }
