--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,6 +14,7 @@
 @import "./light/light.scss";
 @import "./dark/dark.scss";
 @import "./heading.scss";
+@import "./codeblock.scss";
 
 .content{
     margin: 0 8% 0 8%;
