TablePro extension, a table with note

--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -1,4 +1,4 @@
-.content .table {
+.content .table, .content table{
     font-size: 1.75rem;
     border: 2px solid var(--has-border-dark);
     border-spacing: 0;
