some fix of tablePro

--- a/frontEnd/src/style/table.scss
+++ b/frontEnd/src/style/table.scss
@@ -42,7 +42,12 @@
         }
     }
     .selectedCell{
-        background-color: var(--has-background-info);
+        background-color: var(--has-text-light-grey);
     }
 
+}
+.content table-pro{
+    p.note{
+        
+    }
 }
