--- a/frontEnd/src/style/table.scss
+++ b/frontEnd/src/style/table.scss
@@ -54,6 +54,7 @@
     border: 2px solid var(--has-border-dark);
     border-radius: 5px 5px 0 0;
     padding: 0;
+    margin-bottom: 1em;
     
 
     p.tableNote{
