--- a/frontEnd/src/style/codeblock.scss
+++ b/frontEnd/src/style/codeblock.scss
@@ -25,6 +25,7 @@
         .hljs-variable,
         .hljs-template-variable,
         .hljs-attribute,
+        .hljs-attr,
         .hljs-tag,
         .hljs-name,
         .hljs-regexp,
@@ -67,6 +68,10 @@
 
         .hljs-strong {
             font-weight: 700;
+        }
+
+        .hljs-property{
+            color: #FFF;
         }
     }
 }
