--- a/frontEnd/src/style/index.scss
+++ b/frontEnd/src/style/index.scss
@@ -19,3 +19,25 @@
 .content{
     margin: 0 8% 0 8%;
 }
+.content image-pro{
+    display: block;
+    //outline with rounded corners on top
+    border: 2px solid var(--has-border-dark);
+    border-radius: 5px 5px 0 0;
+    padding: 0;
+    margin-bottom: 1em;
+    width: 60%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    p.imageNote{
+        //bold
+        font-weight: 600;
+        margin-top: .5em;
+        margin-bottom: .2em;
+        text-align: center;
+    }
+    img{
+        width: 100%;
+        // 降低显示优先级
+    }
+}
