--- a/frontEnd/src/style/index.scss
+++ b/frontEnd/src/style/index.scss
@@ -16,28 +16,61 @@
 @import "./heading.scss";
 @import "./codeblock.scss";
 
-.content{
-    margin: 0 8% 0 8%;
+.content {
+  margin: 0 8% 0 8%;
+
+  img {
+    // margin-top: 0.75em;
+  }
 }
-.content image-pro{
-    display: block;
-    //outline with rounded corners on top
-    border: 2px solid var(--has-border-dark);
-    border-radius: 5px 5px 0 0;
-    padding: 0;
-    margin-bottom: 1em;
-    width: 60%;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    p.imageNote{
-        //bold
-        font-weight: 600;
-        margin-top: .5em;
-        margin-bottom: .2em;
-        text-align: center;
-    }
-    img{
-        width: 100%;
-        // 降低显示优先级
-    }
+
+.content image-pro {
+  display: block;
+  //outline with rounded corners on top
+  border: 2px solid var(--has-border-dark);
+  border-radius: 5px 5px 0 0;
+  padding: 0;
+  margin-bottom: 1em;
+  width: 60%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+
+  p.imageNote {
+    //bold
+    font-weight: 600;
+    margin-top: .5em;
+    margin-bottom: .2em;
+    text-align: center;
+  }
+
+  img {
+    width: 100%;
+    // 降低显示优先级
+  }
+}
+
+.ProseMirror{
+  img {
+    margin-top: 0;
+  }
+}
+.ProseMirror-gapcursor {
+  display: none;
+  pointer-events: none;
+  position: absolute;
+  margin: 0;
+}
+
+.ProseMirror-gapcursor:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -2px;
+  width: 20px;
+  border-top: 1px solid var(--has-text-black);
+  animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
+}
+
+.ProseMirror-focused .ProseMirror-gapcursor {
+  display: block;
 }
