--- a/FrontEnd/src/style/table.scss
+++ b/FrontEnd/src/style/table.scss
@@ -1,5 +1,5 @@
 .content .table, .content table{
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     border: 2px solid var(--has-border-dark);
     border-spacing: 0;
 
@@ -52,18 +52,19 @@
     display: block;
     //outline with rounded corners on top
     border: 2px solid var(--has-border-dark);
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 5px 5px;
     padding: 0;
     margin-top: 1em;
     margin-bottom: 1em;
     
-    table{
+    table , table:not(:last-child){
         margin-bottom: 0;
     }
-    p.tableNote ,p{
-        font-weight: 600;
+    p.tableNote ,table-pro > p{
+        // font-weight: 600;
         // margin-top: -.6em;
-        margin-bottom: .5em;
+        margin-top: 0.2em;
+        margin-bottom: 0.3em;
         text-align: center;
     }
 }
