--- a/FrontEnd/src/style/index.scss
+++ b/FrontEnd/src/style/index.scss
@@ -85,16 +85,21 @@
     margin-top: 0.75em;
   }
 }
+.ProseMirror-gapcursor {
+  display: none;
+  pointer-events: none;
+  position: absolute;
+  margin: 0;
+}
+.ProseMirror-focused .ProseMirror-gapcursor {
+  display: block;
+}
 .ProseMirror-gapcursor:after {
   content: "";
   display: block;
   position: absolute;
-  top: -25px;
+  top: -2px;
   width: 20px;
-  border-top: 1.3px solid var(--has-text-black);
+  border-top: 1px solid black;
   animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
-}
-
-.ProseMirror-focused .ProseMirror-gapcursor {
-  display: block;
 }
