--- a/FrontEnd/src/style/index.scss
+++ b/FrontEnd/src/style/index.scss
@@ -31,8 +31,8 @@
   border: 2px solid var(--has-border-dark);
   border-radius: 5px 5px 5px 5px;
   width: 60%;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
 
   p {
     // font-weight: 600;
