--- a/Template/template.css
+++ b/Template/template.css
@@ -11,10 +11,22 @@ main {
 
 h1 {
   font-size: 2rem;
+  font-weight: bold;
 }
 
 h2 {
   font-size: 1.5rem;
+  font-weight: bold;
+}
+
+h3{
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+h4{
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 p {
