--- a/FrontEnd/src/style/index.scss
+++ b/FrontEnd/src/style/index.scss
@@ -100,6 +100,6 @@
   position: absolute;
   top: -2px;
   width: 20px;
-  border-top: 1px solid black;
+  border-top: 1px solid var(--has-text-black);
   animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
 }
