--- a/FrontEnd/src/style/heading.scss
+++ b/FrontEnd/src/style/heading.scss
@@ -3,5 +3,5 @@ h1,h2,h3,h4,h5,h6 , .content h1,.content h2,.content h3,.content h4,.content h5,
     color: var(--has-text-grey);
 }
 *{
-    color: var(--has-text-black);
+    // color: var(--has-text-black);
 }
