--- a/FrontEnd/src/style/index.scss
+++ b/FrontEnd/src/style/index.scss
@@ -8,112 +8,16 @@
 @import "bulma/sass/elements/box.sass";
 @import "bulma/sass/elements/progress.sass";
 @import "bulma/sass/components/message.sass";
-// @import "bulma/sass/elements/notification.sass";
 
-@import "./table.scss";
 @import "./light/light.scss";
 @import "./dark/dark.scss";
-@import "./heading.scss";
-@import "./codeblock.scss";
 
 .content {
   margin: 0 8% 0 8%;
 }
 
 
-
-.content image-pro {
-  display: block;
-  padding: 0;
-  margin-bottom: 1em;
-  border: 2px solid var(--has-border-dark);
-  border-radius: 5px 5px 5px 5px;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-
-  p {
-    // font-weight: 600;
-    margin-top: .2em;
-    margin-bottom: .3em;
-    text-align: center;
-  }
-
-  img {
-    width: 100%;
-    border: 0;
-    margin-bottom: 0;
-  }
+h1,h2,h3,h4,h5,h6 , .content h1,.content h2,.content h3,.content h4,.content h5,.content h6 {
+  color: var(--has-text-grey);
 }
 
-@media (max-width: 900px) {
-  .content image-pro {
-    width: 90%;
-  }
-}
-
-.ProseMirror-gapcursor {
-  display: none;
-  pointer-events: none;
-  position: absolute;
-  margin: 0;
-}
-
-.ProseMirror {
-  padding: 0.4em;
-  min-height: 25ch;
-  outline: auto;
-  outline-color: var(--has-border-dark);
-  outline-style: dashed;
-
-  img {
-    margin-top: 0;
-    display: block;
-    // border: 2px solid var(--has-border-dark);
-    border-radius: 5px 5px 5px 5px;
-    width: 60%;
-    margin-left: 50%;
-    margin-bottom: 1em;
-    transform: translateX(-50%);
-  }
-
-  @media (max-width: 900px) {
-    img {
-      width: 90%;
-    }
-  }
-
-  img.ProseMirror-selectednode {
-    border: 2px solid var(--has-border-dark);
-    box-shadow: 0 0 5px var(--has-shadow-dark);
-  }
-}
-
-.ProseMirror-focused {
-  outline: auto;
-
-  >*+* {
-    margin-top: 0.75em;
-  }
-}
-
-.ProseMirror-gapcursor {
-  display: none;
-  pointer-events: none;
-  position: absolute;
-  margin: 0;
-}
-
-.ProseMirror-focused .ProseMirror-gapcursor {
-  display: block;
-}
-
-.ProseMirror-gapcursor:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: -2px;
-  width: 20px;
-  border-top: 1px solid var(--has-text-black);
-  animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
-}
