--- a/FrontEnd/src/style/ProseMirror.scss
+++ b/FrontEnd/src/style/ProseMirror.scss
@@ -12,6 +12,14 @@
         outline-color: var(--has-border-dark);
         outline-style: dashed;
 
+        h1, h2, h3, h4, h5, h6 {
+            margin-top: 0;
+        }
+
+        h3:not(:first-child) {
+            margin-top: inherit;
+        }
+
         img {
             margin-top: 0;
             display: block;
