update Notification.vue and ProseMirror.scss

--- a/FrontEnd/src/style/ProseMirror.scss
+++ b/FrontEnd/src/style/ProseMirror.scss
@@ -3,7 +3,7 @@
 .content {
     .ProseMirror {
         * {
-            font-family: "Times New Roman", Times, serif;
+            font-family: system-ui;
         }
 
         padding: 0.4em;
